[package]
name = "exusss-covid19"
version = "0.2.0"
authors = ["lodik <lodik@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"]}
telegram-bot = "0.7"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
hyper = "0.13"
hyper-tls = "0.4"
hyper-socks2 = "0.4"
async-socks5 = "0.3"
reqwest = { version = "0.10", features = ["json"] }
handlebars = "3.0.1"
chrono = "0.4"
anyhow = "1.0"